--- a/maimai_py/providers/local/areas_zh.json
+++ b/maimai_py/providers/local/areas_zh.json
@@ -1,28 +1,28 @@
 [
   {
     "id": "7sref3",
-    "name": "7sRefちほー3",
-    "comment": "7つの扉のある世界",
-    "description": "プログラムは、ただデータを集積していく。最適化された計算方式に則った、1と0。それだけだ。",
+    "name": "7sRef区域之3",
+    "comment": "拥有七道门扉的世界",
+    "description": "程序只是收集数据，1和0具有最好的计算方法，仅此而已。",
     "video_id": "zqH9qgVNzHI",
     "characters": [
       {
-        "name": "リズ",
+        "name": "利兹【リズ】",
         "illustrator": "かわく",
-        "description1": "この研究メモ……\r\n誰が書いたのかしら？",
-        "description2": "昔の7sRefの記憶は曖昧なようだ。",
+        "description1": "这个研究笔记……\r\n是谁写的？",
+        "description2": "以前的7sRef记忆似乎很模糊",
         "team": "7sRef",
         "props": {
-          "好き": "観測",
-          "苦手": "アシッド",
-          "趣味": "規則正しく物を配置する事"
+          "好き": "观察",
+          "苦手": "Acid【アシッド】",
+          "趣味": "有规律的放置物品"
         }
       },
       {
-        "name": "フルーンシュピラー",
+        "name": "弗隆施皮拉【フルーンシュピラー】",
         "illustrator": "Tobi",
-        "description1": "キミもこの音色に身を任せればいい\r\n……ウン、いい子だね",
-        "description2": "謎めいた雰囲気で、笛で流転者を導くリズの分身の一人。約束を守る者には幸運を運ぶが、違えると……？ 違えた者の結末を知る者はいないようだ。",
+        "description1": "你只要委身于这音色就行了\r\n……嗯，是个好孩子",
+        "description2": "作为气氛神秘的角色之一，莉兹以笛声引导流亡者。凡遵守约定者将获得幸运庇佑，而违背约定者将会面临未知的命运，具体后果无人知晓。",
         "team": "7sRef",
         "props": {
           "身長": "174cm",
@@ -31,10 +31,10 @@
         }
       },
       {
-        "name": "シュヴァルツローゼ",
+        "name": "施瓦尔茨罗斯【シュヴァルツローゼ】",
         "illustrator": "ボダックス",
-        "description1": "君の欲望……いや、そのフラグメント\r\n私のコレクションに見合う価値があるかな？",
-        "description2": "「紫の扉」のゲートキーパー。貴族のように優美で美しい姿だが、闇の中にその姿を隠しており、見られる機会はあまりない。",
+        "description1": "你的欲望……不，是那份碎片\r\n值得成为我的收藏吗？",
+        "description2": "“紫色之门”的守护者，外形贵族般优美且迷人，但总是隐藏在黑暗之中，几乎没人能够见到他的真面目。",
         "team": "7sRef",
         "props": {
           "身長": "195.2cm(体部分)",
@@ -43,10 +43,10 @@
         }
       },
       {
-        "name": "ヘルブラオ",
+        "name": "赫尔布劳【ヘルブラオ】",
         "illustrator": "Mi'yuki",
-        "description1": "春の新作をフラグメントで\r\nチェ～ック！",
-        "description2": "「水色の扉」のゲートキーパー。大きなキャンディの杖を持つ少女。流転者を「カワイ～♪」と眺めながら、流行の情報を追っている。",
+        "description1": "春天新作的碎片\r\n来一探究竟吧！",
+        "description2": "“水色之门”的守门人。手持一根大糖果棒的少女。她一边看着流转者，发出“好可爱~♪”的声音，同时紧跟着流行趋势。",
         "team": "7sRef",
         "props": {
           "身長": "158cm",
@@ -55,15 +55,15 @@
         }
       },
       {
-        "name": "アシッド（幼少期）",
+        "name": "Acid 【アシッド（幼少期）】",
         "illustrator": "あるてら",
-        "description1": "ここはどこ？\r\n……リズ？ リズって誰？",
-        "description2": "荒廃した世界で立ちつくす少女。ぬいぐるみを抱きながら誰かを探している。",
+        "description1": "这是哪里？\r\n……利兹？ 利兹是谁？",
+        "description2": "在荒废的世界中站立着的少女，抱着一只毛绒玩具正在寻找某人。",
         "team": "7sRef",
         "props": {
-          "好き": "リズ",
-          "苦手": "一人ぼっち",
-          "趣味": "宝石集め"
+          "好き": "利兹【リズ】",
+          "苦手": "独自一人",
+          "趣味": "收集宝石"
         }
       }
     ],
@@ -71,21 +71,21 @@
       {
         "title": "Redemption",
         "artist": "XinG、10lulu",
-        "description": "「紫の扉」……その向こうは〈欲望〉から生まれた世界。\r\n門番のシュヴァルツローゼは、扉を通る流転者の撰定を行う恐ろしい存在。\r\n立ち居振る舞いは優美で美しいが、欲望をコレクションすると言う悪癖も持っている。\r\n姿を見た者は少ないが、風変わりな経歴の流転者の前には姿を見せ、気まぐれに役立つ情報をくれる事もある。\r\n\r\n今日も一つの旅を終えた流転者が、扉の前に立ち尽くしている。\r\n彼女の人生は、興味を持つだけの価値があったようだ。大きな翼を広げ、姿を現したシュヴァルツローゼは恭しくお辞儀した。\r\n「今晩は、完全犯罪を成し遂げたお嬢さん」",
+        "description": "‘紫色之门’……那扇门的另一边是一个由‘欲望’所创造的世界。\r\n门卫‘施瓦尔茨罗斯’是一个可怕的存在，他负责筛选那些通过门的流转者。\r\n他的举止优雅美丽，但却有一个令人不安的恶习——她收集欲望。\r\n很少有人见过她的真面目，但对于那些有着不同寻常经历的流转者，他偶尔会显现出来，甚至会为他们提供一些有用的信息。\r\n\r\n今天，又一位完成了旅程的流转者站在了门前。\r\n她的生活似乎值得关注。施瓦尔茨罗斯展开了巨大的翅膀，现身并向她恭敬地鞠了一躬。\r\n「晚上好，完成了完美犯罪的小姐。」",
         "illustrator": "ボダックス",
         "movie": "SEGA"
       },
       {
         "title": "Ether Second",
         "artist": "Akira Complex",
-        "description": "「水色の扉」のゲートキーパー〈ヘルブラオ〉は、流転者に肩入れし過ぎている……と、フルーンシュピラーは密かに思っている。\r\n流転者と言うより〈扉の向こう〉に、著しい関心があると言った方が正しいだろうか？\r\n仕事だよ、と目くばせすると「ちょっとぐらいイイでしょ」と膨れている。わるい子だ。\r\n門番の癖に、扉の向こうの情報を知る事に夢中なのだ。\r\n\r\n扉の前で笛の音を止める。ここまで流転者を誘導するのが、ボクの仕事。\r\n新たに扉を通る流転者達が、ここはどこだろうと不安そうに辺りを伺っていると彼女が声をかけた。\r\n「は～い。ミンナこっちこっち～！ 大丈夫、扉の向こうはステキだよ！ 代わりに私が行きたい位だもん！」\r\nヘルブラオの言葉に、ぎょっとして振り向くと「冗談よ」と笑っていたが、本気だと思う。\r\n扉の向こうに惹かれるのは危険だ。だって、それはボク達の役目ではないのだから。",
+        "description": "‘水色之门’的守门人〈赫尔布劳〉、似乎过于偏袒流转者……这是〈弗隆施皮拉〉悄悄地认为的。\r\n与其说是流转者，不如说她对“门的另一边”很感兴趣？\r\n这可是工作哦，弗隆施皮拉使了个眼色「稍微偏袒点怎么了」鼓着脸说。真是坏孩子呢。\r\n作为门卫，却对‘门的另一侧’的事情如此着迷。\r\n\r\n在门前停下笛声。将流转者引到门前、这就是我的工作。\r\n当新一批流转者有些迷茫地环顾四周，心中充满不安时，赫尔布劳开口了。\r\n「嗨～。大家走这边～！ 没问题的、门的对面很棒的哦！ 我都想代替你们去呢！」\r\n赫尔布拉欧的话吓了我一跳，回头一看，她笑着说“开玩笑的”，我觉得她是认真的。\r\n被门的另一边吸引是很危险的。因为那不是我们的职责。",
         "illustrator": "Mi'yuki、Tobi",
         "movie": "SEGA"
       },
       {
         "title": "The Great Banquet",
         "artist": "Iris",
-        "description": "7sRefの観測者、リズ。\r\n今彼女の興味は、流転者だけが持つ〈フラグメント〉に注がれている。\r\n\r\n(なぜ私はフラグメントを持っていないのかしら？ それに、流転者があんなに大事そうに抱えている理由は？)\r\n記憶が無いリズには、解らない事だらけ。\r\n\r\nしかし、考え込む内、ふと妙案を思い付いた。\r\n（私も自分のフラグメントを作ってみよう）\r\nリズは観測者であると同時に研究者でもあったので、古い実験道具を引っ張り出して構成を調べてみる事にした。\r\n\r\n塔を削って成分を抽出してみると、試験管の中で数値化出来ない「感情」や「記憶」が輝いている。\r\n魅了された彼女が、更に良く見ようと覗き込んだその時だ。\r\n\r\n『触レテハイケナイ』\r\n\r\n頭に響いた声に驚いた拍子、手の中の試験管は音を立て砕けてしまった。",
+        "description": "7sref观察者，利兹。\r\n现在她的兴趣集中在流转者独有的片段上。\r\n(なぜ私はフラグメントを持っていないのかしら？ それに、流転者があんなに大事そうに抱えている理由は？)\r\n記憶が無いリズには、解らない事だらけ。\r\n\r\nしかし、考え込む内、ふと妙案を思い付いた。\r\n（私も自分のフラグメントを作ってみよう）\r\nリズは観測者であると同時に研究者でもあったので、古い実験道具を引っ張り出して構成を調べてみる事にした。\r\n\r\n塔を削って成分を抽出してみると、試験管の中で数値化出来ない「感情」や「記憶」が輝いている。\r\n魅了された彼女が、更に良く見ようと覗き込んだその時だ。\r\n\r\n『触レテハイケナイ』\r\n\r\n頭に響いた声に驚いた拍子、手の中の試験管は音を立て砕けてしまった。",
         "illustrator": "かわく",
         "movie": "あるし"
       },
